  or not when child created and if child can be linked
  to more than one incident.

* Made Incident field on Create/Split pages more flexible.
  Users allowed to change value, enter multiple incidents
  when it's allowed by config, pick particular incidents
  on split, additional incidents' info displayed.

* RTIR's SLA implementation have been dropped in favor
  of RT::Extension::SLA.

* Numerouse bug fixes.

CHANGES IN 2.6.1
----------------

FEATURES
========

* allow local customization of research tools, see @RTIRResearchTools
  in the config
* new Iframe research tool, see $RTIRIframeResearchToolConfig
* no longer do a whois lookup by default just by visiting the
  lookup page

CALLBACKS
=========

* LeftColumnStart and RightColumnStart in Incidents' Display.html

BUGS
====

* order of tickets on 'RTIR at Glance' page could become incorrect
  after using system for a while
* on create incident page ids of HTML elements were repeated

CLEANUPS
========

* code cleanups to better follow modern perl coding guidelines
* config file is now has POD instead of comments and options are
  in better ordered

CHANGES IN 2.6.0 SINCE RTIR 2.4.x
---------------------------------

FEATURES
========

* INCOMPATIBLE: prefix '_RTIR_' has been deleted from
  all custom fields in RTIR. See UPGRADING for upgrade
  instructions.
* INCOMPATIBLE: New option %RTIR_CustomFieldDefaults
  that replaces several $RTIR_*_default options that
  were there before, don't forget to update config.
* almost all default Custom Fields of RTIR now can be
  disabled or un-applied. Read more in Administration
  Tutorial.
* IP CF can be changed to single value
* On create with linking (a new child from an incident or a new
  incident from a child) use default values for custom fields
  from linked object
* allow to use any custom field for lookup, not only IP,
  no UI at the moment, but can be used via arguments of a URL
  in clicky actions or linked CFs 