@@ -312,8 +312,8 @@ $QueueObj->Load( $Queue ) || Abort( loc("Queue could not be loaded.") );
 
 
 my $Type = RT::IR::TicketType( Queue => $Queue );
-if ($Type eq 'Block' && RT->Config->Get('RTIR_DisableBlocksQueue') ) {
-    Abort(loc("Blocks queue is disabled via config file"));
+if ($Type eq 'Block' && RT::IR->BlocksQueueIsDisabled($session{'CurrentUser'}) ) {
+    Abort(loc("Blocks queue is currently disabled"));
 }
 if ( $m->comp_exists("/RTIR/$Type/Create.html") ) {
     return $m->comp( "/RTIR/$Type/Create.html", %ARGS );
