@@ -1,7 +1,7 @@
 <%INIT>
 my @queues = ('Incident Reports');
 push @queues, 'Investigations' if $ARGS{'All'};
-push @queues, 'Blocks' if $ARGS{'All'} && !RT->Config->Get('RTIR_DisableBlocksQueue');
+push @queues, 'Blocks' if $ARGS{'All'} && !RT::IR->BlocksQueueIsDisabled($session{'CurrentUser'});
 
 return $m->comp(
     '/RTIR/Search/Elements/RefinePage',
