@@ -90,7 +90,7 @@ if ( $TicketObj && RT::IR::TicketType( Ticket => $TicketObj ) eq 'Incident'
                 Requestors => $q,
             ),
         };
-    } elsif ( $Queue eq 'Blocks' && $LookupType eq 'ip' && !RT->Config->Get('RTIR_DisableBlocksQueue') ) {
+    } elsif ( $Queue eq 'Blocks' && $LookupType eq 'ip' && !RT::IR->BlocksQueueIsDisabled($session{'CurrentUser'}) ) {
         push @box_actions, {
             title => loc('Create'),
             path => "/RTIR/Create.html?". $m->comp('/Elements/QueryString',
